Updated html information and added a bit of styling.
Added all the necessary HTML data and added CSS grids to the main content containers.

--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,34 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     text-align: center;
 }
+
+.holiday-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+.h-3 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+.h-5 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.h-6 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+.h-7 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
