--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ a:hover {
 .partner-heading {
     text-align: center;
     padding: 5% 0 2% 0;
+    color: #666666
 }
 
 .partner-content > img {
@@ -82,11 +83,15 @@ a:hover {
     text-align: center;
 }
 
-.partner-link {
+.link-2 {
+    padding-top: 2%;
     text-align: center;
-    padding: 15px;
+}
+
+.partner-link {
+    padding: 13px;
     color: #FF4E50;
-    border-radius: 50px 50px 50px 50px;
+    border-radius: 40px 40px 40px 40px;
     border: 2px solid #FF4E50;
     text-decoration: none;
 }
@@ -99,11 +104,13 @@ a:hover {
 .holiday-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-gap: 5px;
 }
 
 .holiday-heading {
     text-align: center;
+    color: #666666;
+    padding-top: 7%;
 }
 
 .h-3 {
