--- a/main.css
+++ b/main.css
@@ -104,34 +104,85 @@ a:hover {
 .holiday-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 5px;
+    grid-gap: 20px;
+    height: auto;
+    text-align: center;
+    position: relative;
+    padding: 0px 15%;
 }
 
 .holiday-heading {
     text-align: center;
     color: #666666;
-    padding-top: 7%;
+    padding: 7% 0 3% 0;
 }
 
-.h-3 {
-    grid-column-start: 3;
-    grid-column-end: 4;
+.block-1 {
+    background-image: url(../img/block1Sports.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
+    border-radius: 5px;
 }
 
-.h-5 {
+.block-2 {
+    background-image: url(../img/block2Wellness.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
+    border-radius: 5px;
+}
+
+.block-3 {
+    background-image: url(../img/block3Expeditions.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
+    border-radius: 5px;
+}
+
+.block-4 {
+    background-image: url(../img/block4Games.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
+    border-radius: 5px;
+}
+
+.block-5 {
+    background-image: url(../img/block5Culture.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 4;
+    border-radius: 5px;
 }
 
-.h-6 {
+.block-6 {
+    background-image: url(../img/block6Beauty.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
     grid-column-start: 1;
     grid-column-end: 3;
+    border-radius: 5px;
 }
 
-.h-7 {
-    grid-column-start: 3;
-    grid-column-end: 4;
+.block-7 {
+    background-image: url(../img/block7Travelling.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 350px;
+    border-radius: 5px;
 }
+
+.block-1 > div, .block-2 > div, .block-3 > div, .block-4 > div, .block-5 > div, .block-6 > div, .block-7 > div {
+    position: relative;
+    top:200px;
+}
+
+/* FOOTER SECTION BELOW */
 
 .footer-container {
     display: grid;
