--- a/main.css
+++ b/main.css
@@ -17,11 +17,14 @@
 .heading {
     font-size: 47px;
     text-align: center;
+    font-family: 'Roboto';
+    font-weight: 900;
 }
 
 .heading-text {
     padding: 5px 0 25px 0;
-    font-size: 23px;
+    font-size: 18px;
+    font-family: 'Montserrat';
 }
 
 .logo {
@@ -38,7 +41,9 @@
 .nav-content {
     float: right;
     padding: 5% 14% 0 0;
-    font-size: 18px;
+    font-size: 16px;
+    font-family: 'Roboto';
+    font-weight: 500;
 }
 
 a:hover {
@@ -52,6 +57,8 @@ a:hover {
     background-color: #FF4E50;
     color: white;
     padding: 15px;
+    font-family: 'Montserrat';
+    font-weight: 600;
 }
 
 /* BODY SECTION */
@@ -72,7 +79,9 @@ a:hover {
 .partner-heading {
     text-align: center;
     padding: 5% 0 2% 0;
-    color: #666666
+    color: #444444;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .partner-content > img {
@@ -113,8 +122,10 @@ a:hover {
 
 .holiday-heading {
     text-align: center;
-    color: #666666;
+    color: #444444;
     padding: 7% 0 3% 0;
+    font-family: 'Roboto';
+    font-weight: 900;
 }
 
 .block-1 {
@@ -123,6 +134,8 @@ a:hover {
     background-size: cover;
     height: 350px;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-2 {
@@ -131,6 +144,8 @@ a:hover {
     background-size: cover;
     height: 350px;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-3 {
@@ -139,6 +154,8 @@ a:hover {
     background-size: cover;
     height: 350px;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-4 {
@@ -147,6 +164,8 @@ a:hover {
     background-size: cover;
     height: 350px;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-5 {
@@ -157,6 +176,8 @@ a:hover {
     grid-column-start: 2;
     grid-column-end: 4;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-6 {
@@ -167,6 +188,8 @@ a:hover {
     grid-column-start: 1;
     grid-column-end: 3;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-7 {
@@ -175,11 +198,15 @@ a:hover {
     background-size: cover;
     height: 350px;
     border-radius: 5px;
+    font-family: 'Montserrat';
+    font-weight: 800;
 }
 
 .block-1 > div, .block-2 > div, .block-3 > div, .block-4 > div, .block-5 > div, .block-6 > div, .block-7 > div {
     position: relative;
-    top:200px;
+    top:150px;
+    font-size: 25px;
+    color: white;
 }
 
 /* FOOTER SECTION BELOW */
