--- a/main.css
+++ b/main.css
@@ -117,7 +117,7 @@ a:hover {
     height: auto;
     text-align: center;
     position: relative;
-    padding: 0px 15%;
+    padding: 0 15% 5% 15%;
 }
 
 .holiday-heading {
@@ -218,6 +218,25 @@ a:hover {
     padding-bottom: 25px;
 }
 
+.footer-name {
+    color: #FF4E50;
+}
+
+.head {
+    font-family: 'Montserrat';
+}
+
+.view {
+    color: #FF4E50;
+}
+
 ul {
     list-style-type: none;
+    padding: 0;
+}
+
+li {
+    padding: 5px 0 5px 0;
+    color: #666666;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
